--- a/cards.html
+++ b/cards.html
@@ -3,23 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dogs</title>
+    <style>
+        .flex-container {
+            display: flex;
+            flex-wrap: nowrap;
+            justify-content: center;
+            gap: 20px;
+            margin: 20px;
+            overflow-x: auto;
+        }
+        .image-container {
+            text-align: center;
+            font-size: 18px;
+            font-weight: bold;
+        }
+        img {
+            width: 100%;
+            max-width: 500px;
+            height: auto;
+            border: 5px solid blue;
+        }
+        .image-title {
+            margin-top: 10px;
+        }
+        .image-caption {
+            margin-top: 10px;
+            font-size: 16px;
+        }
+    </style>
 </head>
 <body>
-    <div class="flex-container" style="display: flex; margin: 10px;">
-        <div class="image-container" style="text-align: center; font-size: 18px; font-weight: bold; margin-top: 10px;"><img style="width: 500px; height: 332px; padding:0px; margin: 50px; border: 5px solid blue;" src="https://images.pexels.com/photos/1938126/pexels-photo-1938126.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Black dog">
-            <div class="image-title">Black dog</div><br>
-            <div class="image-caption">This is black dog</div>
+    <div class="flex-container">
+        <div class="image-container">
+            <img src="https://images.pexels.com/photos/1938126/pexels-photo-1938126.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="A black dog lying in the grass">
+            <div class="image-title">Black dog</div>
+            <div class="image-caption">This is a black dog.</div>
         </div>
-        <div class="image-container" style="text-align: center; font-size: 18px; font-weight: bold; margin-top: 10px;"><img style="width: 500px; height: auto; padding:0px; margin: 50px; border: 5px solid blue;" src="https://images.pexels.com/photos/1189673/pexels-photo-1189673.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Red dog dog">
-            <div class="image-title">Red dog</div><br>
-            <div class="image-caption">This is red dog</div>
+        <div class="image-container">
+            <img src="https://images.pexels.com/photos/1189673/pexels-photo-1189673.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="A red dog sitting outdoors">
+            <div class="image-title">Red dog</div>
+            <div class="image-caption">This is a red dog.</div>
         </div>
-        <div class="image-container" style="text-align: center; font-size: 18px; font-weight: bold; margin-top: 10px;"><img style="width: 500px; height: auto; padding:0px; margin: 50px; border: 5px solid blue;" src="https://images.pexels.com/photos/594687/pexels-photo-594687.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="White dog">
-            <div class="image-title">White dog</div><br>
-            <div class="image-caption">This is white dog</div>
+        <div class="image-container">
+            <img src="https://images.pexels.com/photos/594687/pexels-photo-594687.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="A white dog lying in a field">
+            <div class="image-title">White dog</div>
+            <div class="image-caption">This is a white dog.</div>
         </div>
-      </div> 
-
+    </div>
 </body>
 </html>
